# cable_analysis

./: CMakeLists.txt  anotacoes.md  package.xml  plugins.xml  requirements.txt  test.py  test2.py
config/: default.yaml
docker/: Dockerfile  install.sh  saveimgs.py
include/: mask_picker.h
launch/: mask_picker.launch
scripts/: centroid.py  edge_detection.py  get_images_realsense.py
src/: canny_edge_detection_node.cpp  canny_edge_video_detection_node.cpp  countors_node.cpp  cv_bridge_node.cpp  mask_picker.cpp  vertical_line_detection_node.cpp  vertical_lines_video_extractor_node.cpp
